# pacaptr

./: .cspell.json  .gitignore  .goreleaser.yml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  go.mod  go.sum  main.go  rustfmt.toml
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: Rust.yml  dependabot-auto-merge.yml  docs.yml  linux-static.yml  linux-test.yml  macos-test.yml  notify.yml  notify.yml.bak  publish.yml  rs-dev-action.yml  test.yml  windows-test.yml
core/: Cargo.toml  build.rs
core/src/: error.rs  exec.rs  lib.rs
core/src/dispatch/: opt.rs
core/src/package_manager/: chocolatey.rs  homebrew.rs  macports.rs  mod.rs  pip.rs  tlmgr.rs
core/tests/: smoke_test.rs
crates/pacaptr-docs/: Cargo.toml
crates/pacaptr-docs/src/: errors.rs  lib.rs  pm.rs
crates/pacaptr-macros/: Cargo.toml
crates/pacaptr-macros/src/: compat_table.rs  lib.rs  test_dsl.rs
dispatch/: chocolatey.go  dispatch.go  exec.go  homebrew.go  impl_chocolatey.go  impl_dpkg.go  impl_homebrew.go  impl_unknown.go  packmanager.go  pacman.go  unknown.go
docs/: CONTRIBUTING.md  compatibility_table.md  compatibility_table.txt
legacy/: README.md  go.mod  main.go
legacy/dispatch/: exec.go  impl_chocolatey.go  impl_dpkg.go  impl_homebrew.go  impl_unknown.go  packmanager.go
pacaptr-macros/src/: lib.rs  test_dsl.rs
parser/: parser.go
src/: cmd.rs  config.rs  dispatch.rs  docs.rs  error.rs  exec.rs  lib.rs  main.rs  package_manager.rs  packmanager.rs  pm.rs  print.rs
src/dispatch/: cmd.rs  config.rs  mod.rs  opt.rs
src/package_manager/: apk.rs  apt.rs  aptget.rs  chocolatey.rs  conda.rs  dnf.rs  homebrew.rs  linuxbrew.rs  macports.rs  mod.rs  pip.rs  scoop.rs  tlmgr.rs  unknown.rs  zypper.rs
src/packmanager/: apk.rs  apt.rs  aptget.rs  chocolatey.rs  dnf.rs  dpkg.rs  homebrew.rs  linuxbrew.rs  unknown.rs  zypper.rs
src/pm/: apk.rs  apt.rs  brew.rs  choco.rs  chocolatey.rs  conda.rs  dnf.rs  emerge.rs  homebrew.rs  macports.rs  mod.rs  pip.rs  pkcon.rs  port.rs  portage.rs  scoop.rs  tlmgr.rs  unknown.rs  winget.rs  xbps.rs  zypper.rs
src/print/: prompt.rs  style.rs
tests/: apk.rs  apt.rs  brew.rs  choco.rs  chocolatey.rs  common.rs  conda.rs  dnf.rs  emerge.rs  homebrew.rs  integration_test.rs  linuxbrew.rs  pip.rs  pkcon.rs  port.rs  scoop.rs  smoke_test.rs  test.py  test_util.py  utils.rs  winget.rs  xbps.rs  zypper.rs
xtask/: Cargo.toml
xtask/src/: binary.rs  dispatch.rs  main.rs
xtask/src/dispatch/: bump_choco.rs  bump_tap.rs  install.rs  mod.rs  publish.rs  run.rs
~/Downloads/: pacaptr.toml
