# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [".", "crates/*"]

[workspace.package]
version = "0.23.0"
license = "GPL-3.0"
edition = "2024"

[workspace.dependencies]
itertools = "0.14.0"
once_cell = "1.21.3"
regex = { version = "1.11.0", default-features = false, features = [
  "std",
  "perf",
  "unicode-case",
  "unicode-perl",
] }

# https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md#configuration
[workspace.metadata.release]
allow-branch = ["master"]
pre-release-commit-message = "dist: cut a new release"
# https://github.com/crate-ci/cargo-release/issues/333
tag = false

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unused_allocation = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
nursery = "warn"
pedantic = "warn"
todo = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[package]
name = "pacaptr"
version.workspace = true
license.workspace = true
edition.workspace = true
homepage = "https://github.com/rami3l/pacaptr"
repository = "https://github.com/rami3l/pacaptr"
description = "Pacman-like syntax wrapper for many package managers."
readme = "README.md"

keywords = ["package-management"]
categories = ["command-line-utilities"]

include = ["LICENSE", "Cargo.toml", "src/**/*.rs", "build.rs"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
# https://github.com/crate-ci/cargo-release/issues/333
tag = true
tag-message = ""

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides]
x86_64-apple-darwin.pkg-url = "{ repo }/releases/download/v{ version }/{ name }-darwin-universal2{ archive-suffix }"
aarch64-apple-darwin.pkg-url = "{ repo }/releases/download/v{ version }/{ name }-darwin-universal2{ archive-suffix }"
x86_64-pc-windows-msvc = { pkg-url = "{ repo }/releases/download/v{ version }/{ name }-windows-amd64{ archive-suffix }", pkg-fmt = "zip" }
aarch64-pc-windows-msvc = { pkg-url = "{ repo }/releases/download/v{ version }/{ name }-windows-arm64{ archive-suffix }", pkg-fmt = "zip" }
x86_64-unknown-linux-musl.pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-amd64{ archive-suffix }"
aarch64-unknown-linux-musl.pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-arm64{ archive-suffix }"

[package.metadata.deb]
copyright = "2020, Rami3L"
maintainer = "Rami3L <rami3l@outlook.com>"
# license-file = ["LICENSE", "4"]
assets = [
  [
    "target/release/pacaptr",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/pacaptr/README",
    "644",
  ],
]
depends = "$auto"
extended-description = "Pacman-like syntax wrapper for many package managers."
priority = "optional"
section = "utility"

[build-dependencies]
built = { version = "0.7.4", features = ["git2"] }

[dev-dependencies]
xshell = "0.2.6"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.34", features = ["cargo", "derive"] }
console = "0.15.11"
ctrlc = { version = "3.4.5", features = ["termination"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs-next = "2.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
indoc = "2.0.6"
itertools = { workspace = true }
macro_rules_attribute = "0.2.0"
pacaptr-macros = { path = "crates/pacaptr-macros", version = "0.23.0" }
paste = "1.0.15"
regex = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.12"
thiserror-ext = "0.2.0"
tokio = { version = "1.44.1", features = [
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.14", features = ["codec", "compat"] }
tt-call = "1.0.9"
which = "7.0.1"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", default-features = false, features = ["user"] }

[features]
test = ["pacaptr-macros/test"]

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[lints]
workspace = true
