# cargo-features = ["strip"]

[package]
authors = ["Rami3L <rami3l@outlook.com>"]
description = "A pacman-like wrapper for many package managers."
edition = "2018"
name = "pacaptr"
version = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.37"
itertools = "0.10.0"
prettytable-rs = "0.8.0"
regex = "1.4.2"

[dependencies]
async-trait = "0.1.42"
bytes = "1.0.0"
clap = "3.0.0-beta.2"
colored = "2.0.0"
confy = "0.4.0"
dirs = "3.0.1"
futures = "0.3.8"
is-root = "0.1.2"
lazy_static = "1.4.0"
regex = {version = "1.4.2", default-features = false, features = ["std", "perf"]}
serde = {version = "1.0.118", features = ["derive"]}
thiserror = "1.0.23"
tokio = {version = "1.0.1", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync"]}
tokio-stream = "0.1.0"
tokio-util = {version = "0.6.0", features = ["codec"]}
which = "4.0.2"

[package.metadata.deb]
copyright = "2020, Rami3L"
maintainer = "Rami3L <rami3l@outlook.com>"
# license-file = ["LICENSE", "4"]
assets = [
  ["target/release/pacaptr", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/pacaptr/README", "644"],
]
depends = "$auto"
extended-description = """\
A Rust port of icy/pacapt, a wrapper for many package managers with \
pacman-style command syntax."""
priority = "optional"
section = "utility"
