[package]
authors = ["rami3l <rami3l@outlook.com>"]
edition = "2021"
name = "xtask"
version = "0.15.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
const_format = "0.2.22"
pico-args = "0.4.2"
regex = { version = "1.5.5", default-features = false, features = [
    "std",
    "unicode-perl",
] }
xml-rs = "0.8.4"
xshell = "0.2.1"
