[package]
authors = ["rami3l <rami3l@outlook.com>"]
edition = "2021"
name = "xtask"
version = "0.16.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
const_format = "0.2.26"
pico-args = "0.5.0"
regex = { version = "1.6.0", default-features = false, features = [
    "std",
    "unicode-perl",
] }
xml-rs = "0.8.4"
xshell = "0.2.2"
