[package]
authors = ["rami3l <rami3l@outlook.com>"]
edition = "2021"
name = "xtask"
version = "0.19.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
const_format = "0.2.30"
pico-args = "0.5.0"
regex = { version = "1.8.1", default-features = false, features = [
    "std",
    "unicode-perl",
] }
xml-rs = "0.8.5"
xshell = "0.2.3"
