[package]
name = "pacaptr-macros"
version = "0.21.0"
license.workspace = true
edition.workspace = true

homepage = "https://github.com/rami3l/pacaptr/tree/master/crates/pacaptr-macros"
repository = "https://github.com/rami3l/pacaptr/tree/master/crates/pacaptr-macros"
description = "Implementation of several macros used in pacaptr."

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.82"
itertools = "0.12.1"
litrs = { version = "0.4.1", optional = true }
once_cell = "1.19.0"
proc-macro2 = "1.0.81"
quote = { version = "1.0.36", optional = true }
regex = "1.10.4"
syn = "2.0.60"
tabled = "0.15.0"

[features]
test = ["dep:litrs", "dep:quote"]

[lints]
workspace = true
