[package]
name = "pacaptr-macros"
version.workspace = true
license.workspace = true
edition.workspace = true

homepage = "https://github.com/rami3l/pacaptr/tree/master/crates/pacaptr-macros"
repository = "https://github.com/rami3l/pacaptr/tree/master/crates/pacaptr-macros"
description = "Implementation of several macros used in pacaptr."

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
itertools = { workspace = true }
litrs = { version = "0.4.1", optional = true }
once_cell = { workspace = true }
proc-macro2 = "1.0.84"
quote = { version = "1.0.36", optional = true }
regex = { workspace = true }
syn = "2.0.66"
tabled = "0.15.0"

[features]
test = ["dep:litrs", "dep:quote"]

[lints]
workspace = true
